# Fantasy-Football-API

./: README.md
chapter3/: readme.md  test_crud.py
chapter4/: main.py  test_main.py
chapter5/: database.py  fantasy_data.db  main.py  main_bkup.py
chapter7/: Dockerfile  requirements.txt
chapter7/sdk/: README.md  pyproject.toml
chapter7/sdk/src/swcpy/: swc_client.py  swc_config.py
chapter7/sdk/tests/: test_swcpy_expanded.py
sdk/tests/: test_swcpy.py
