[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swcpy"
version = "0.0.1"
authors = [
    { name="[Naresh]"},
]
description = "Example SDK from Hands-on API book for AI and Data Science"
requires-python = ">=3.10"
classifiers = [
    "development Status :: 3 - Alpha",
    "Programmin Language :: Python :: 3",
    "License :: OST Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pytest>=8.1',
    'httpx>=0.27.0',
]